--- a/index_v.html
+++ b/index_v.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru-ru" lang="ru-ru" >
 <head>
 
-<base href="https://menshnik.000webhostapp.com/">
+<base href="E:/Новый_сайт/">
 
 <link rel="icon" type="image/png" href="templates/vinograd/css/sd_preview.png" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="engine/classes/js/jqueryui.js"></script>
 <script type="text/javascript" src="engine/classes/js/dle_js.js"></script>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 <script type="text/javascript" src="engine/editor/scripts/webfont.js"></script>
 <link media="screen" href="engine/editor/css/default.css" type="text/css" rel="stylesheet" />  
     <link rel="stylesheet" href="engine/nivo-slider/themes/default/default.css" type="text/css" media="screen" />
@@ -49,7 +49,7 @@
   <div id="background-all">
     <div id="background-top"></div>
     <div id="container">
-      <div id="header"><a class="logo" title="На главную" href="https://menshnik.000webhostapp.com/"></a>
+      <div id="header"><a class="logo" title="На главную" href="E:/Новый_сайт/"></a>
         <div class="phone"><img class="thumb" src="templates/vinograd/css/phone000.png" width="47" height="76" alt="Закажите саженцы винограда по этим номерам" />
           <div class="phone-number">
             (073) 029-65-55<br />
@@ -60,7 +60,7 @@
     <div id="wrapper">
         <div class="slider-wrapper">
             <div class="ribbon"></div>
-            <div id="slider" class="nivoSlider"><a href="https://menshnik.000webhostapp.com/">
+            <div id="slider" class="nivoSlider"><a href="E:/Новый_сайт/">
                 <img src="uploads/slider/1.jpg" alt="" /></a>
             </div>
         </div>
