--- a/index_v.html
+++ b/index_v.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru-ru" lang="ru-ru" >
 <head>
 
-<base href="E:/Новый_сайт/">
+<base href="https://github.com/menshnik/.github.io/">
 
 <link rel="icon" type="image/png" href="templates/vinograd/css/sd_preview.png" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
