--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Персональный сайт - Главная страница</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
-	<base href="E:/Новый_сайт/">
+	<!-- <base href="E:/Новый_сайт/"> -->
 
     <link rel="stylesheet" type="text/css" href="_st/my.css">
-    <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
+    <!-- <link rel="stylesheet" type="text/css" href="js/calendar2.css">	 -->
 </head>
 
 <body class='base'>
@@ -22,7 +22,7 @@
         <a class="logo-lnk" href="">Мой сайт</a>
       </div>
 
-        <nav class="main-menu">
+        <!-- <nav class="main-menu">
           <div id="catmenu">
             <div id="uNMenuDiv1" class="uMenuV">
 			  <ul class="uMenuRoot">
@@ -37,7 +37,7 @@
             <div class="clr">
 			</div>
           </div>
-        </nav>
+        </nav> -->
 
       </header>
 
@@ -48,10 +48,10 @@
 			
               <style type="text/css" media="all"></style>
                  <!-- highslide start  -->
-              <script type="text/javascript" src="inc/highslide/highslide_.js"></script>
+              <!-- <script type="text/javascript" src="inc/highslide/highslide_.js"></script>
               <script type="text/javascript">    
                 hs.graphicsDir = 'inc/highslide/graphics/';
-              </script>
+              </script> -->
 
               <table width=740 border=0 cellspacing=0 cellpadding=0 align=center>
                 <tr valign=center>
@@ -81,9 +81,9 @@
               				
               </table>
 
-              <div align="center">Хостинг от <a href="http://www.ucoz.ru/" title="Создать сайт бесплатно">uCoz</a>
+              <!-- <div align="center">Хостинг от <a href="http://www.ucoz.ru/" title="Создать сайт бесплатно">uCoz</a>
 			  <br>
-			  </div>
+			  </div> -->
 			</section>
           </div>        
         
@@ -130,13 +130,13 @@
 			    <div class="sidetitle"><span>Друзья сайта</span>
 			    </div>
 
-                <div class="inner">
+                <!-- <div class="inner">
 			      <ul>
                     <li><a href="https://blog.ucoz.ru/" target="_blank" rel="noopener nofollow">Официальный блог</a></li>
                     <li><a href="https://forum.ucoz.ru/" target="_blank" rel="noopener nofollow">Сообщество uCoz</a></li>
                     <li><a href="https://www.ucoz.ru/help/" target="_blank" rel="noopener nofollow">База знаний uCoz</a></li>
                   </ul>
-                </div>
+                </div> -->
 
                 <div class="clr">
 			    </div>
@@ -166,13 +166,13 @@
           <div class="copy">
             Copyright Персональный сайт © 2019
           </div>
-          <div class="ucoz-copy"><!-- "' --><span class="pbs1Gp05"><a href="https://www.ucoz.ru/" target="_blank" rel="nofollow">uCoz</a></span>
-    	  </div>
+          <!-- <div class="ucoz-copy"><span class="pbs1Gp05"><a href="https://www.ucoz.ru/" target="_blank" rel="nofollow">uCoz</a></span>
+    	  </div> -->
         </div>
       </footer>
 
     </div>
-    <script src="js/calendar2.js"></script>
+    <!-- <script src="js/calendar2.js"></script> -->
 
   </body>
 </html>
