--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- <base href="E:/Новый_сайт/"> -->
 
     <link rel="stylesheet" type="text/css" href="my.css">
-    <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
+    <link rel="stylesheet" type="text/css" href="calendar2.css">	
 </head>
 
 <body class='base'>
@@ -172,7 +172,7 @@
       </footer>
 
     </div>
-    <script src="js/calendar2.js"></script>
+    <script src="calendar2.js"></script>
 
   </body>
 </html>
