--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="logo-lnk" href="">Мой сайт</a>
       </div>
 
-<!--         <nav class="main-menu">
+        <nav class="main-menu">
           <div id="catmenu">
             <div id="uNMenuDiv1" class="uMenuV">
 			  <ul class="uMenuRoot">
@@ -37,7 +37,7 @@
             <div class="clr">
 			</div>
           </div>
-        </nav> -->
+        </nav>
 
       </header>
 
