--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         
       <div class="logo-b">
-        <a class="logo-lnk" href="">Мой сайт</a>
+        <a class="logo-lnk" href="https://menshnik.github.io/web/">Мой сайт</a>
       </div>
 
         <nav class="main-menu">
