--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Персональный сайт - Главная страница</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
-	<!-- <base href="E:/Новый_сайт/"> -->
+	<base href="https://menshnik.github.io/web//">
 
     <link rel="stylesheet" type="text/css" href="_st/my.css">
     <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
@@ -19,7 +19,7 @@
     <header class="header">
         
       <div class="logo-b">
-        <a class="logo-lnk" href="https://menshnik.github.io/web/">Мой сайт</a>
+        <a class="logo-lnk" href="">Мой сайт</a>
       </div>
 
         <nav class="main-menu">
