--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Персональный сайт - Главная страница</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
-	<base href="https://menshnik.github.io/web//">
+	<base href="https://menshnik.github.io/web/">
 
     <link rel="stylesheet" type="text/css" href="_st/my.css">
     <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
