--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<!-- <base href="https://menshnik.github.io/web/"> -->
 
-    <link rel="stylesheet" type="text/css" href="_st/my.css">
+    <link rel="stylesheet" type="text/css" href="my.css">
     <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
 </head>
 
