--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			
               <style type="text/css" media="all"></style>
                  <!-- highslide start  -->
-              <!-- <script type="text/javascript" src="inc/highslide/highslide_.js"></script>
+              <script type="text/javascript" src="inc/highslide/highslide_.js"></script>
               <script type="text/javascript">    
                 hs.graphicsDir = 'inc/highslide/graphics/';
-              </script> -->
+              </script>
 
               <table width=740 border=0 cellspacing=0 cellpadding=0 align=center>
                 <tr valign=center>
