--- a/index_v.html
+++ b/index_v.html
@@ -49,7 +49,7 @@
   <div id="background-all">
     <div id="background-top"></div>
     <div id="container">
-      <div id="header"><a class="logo" title="На главную" href="E:/Новый_сайт/"></a>
+      <div id="header"><a class="logo" title="На главную" href="https://menshnik.github.io/web/"></a>
         <div class="phone"><img class="thumb" src="templates/vinograd/css/phone000.png" width="47" height="76" alt="Закажите саженцы винограда по этим номерам" />
           <div class="phone-number">
             (073) 029-65-55<br />
@@ -60,7 +60,7 @@
     <div id="wrapper">
         <div class="slider-wrapper">
             <div class="ribbon"></div>
-            <div id="slider" class="nivoSlider"><a href="E:/Новый_сайт/">
+            <div id="slider" class="nivoSlider"><a href="https://menshnik.github.io/web/">
                 <img src="uploads/slider/1.jpg" alt="" /></a>
             </div>
         </div>
