--- a/index_v.html
+++ b/index_v.html
@@ -81,7 +81,7 @@
 		</a>
 	</li>
 	<li class="item10">
-		<a href="https://menshnik.github.io/web/katalog1.html">
+		<a href="katalog1.html">
 			<span>Каталог (разное)</span>
 		</a>
 	</li>
