--- a/catalog/bagena.html
+++ b/catalog/bagena.html
@@ -100,9 +100,9 @@
 <div id="content">
 <div id='dle-content'><div id="catalog-full">
 <span class="button" style="clear:both; float:right; margin: 5px;"><a href="javascript:history.go(-1);"> вернуться к каталогу </a></span>
-<h1>Алладин</h1>
+<h1>Бажена</h1>
 <br />
-<!--TBegin--><a href="uploads/posts/aladdin3.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin4.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/aladdin5.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin6.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/aladdin7.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin8.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />Срок созревания: <b>ранний</b><br />Средняя масса грозди, кг: <b>0,7</b><br />Средний вес ягоды, гр: <b>9-10</b><br />Окраска ягоды: <b>желто-розовые</b><br />Вкус (привкус) ягоды: <b>легкий мускатный</b><br />Восприимчивость к заболеваниям, баллов: <b>2-3</b><br />Устойчивость к морозу,° С: <b>25</b><br />Самоопыляемый<br />
+<!--TBegin--><a href="uploads/posts/bagena3.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/bagena4.jpg" alt='Бажена' title='Бажена'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/bagena5.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/bagena6.jpg" alt='Бажена' title='Бажена'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/bagena7.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/bagena8.jpg" alt='Бажена' title='Бажена'  /></a><!--TEnd--><br /><br /><br /><br /><br /><br /><br /><br />Срок созревания: <b>ранний</b><br />Вес грозди, кг: <b>0.6-1.5</b><br />Вес ягоды, гр: <b>1.4-2.3</b><br />Окраска ягоды: <b>от беловато-желтого до желто-салатового</b><br />Вкус (привкус) ягоды: <b>гармоничный</b><br />Восприимчивость к заболеваниям, баллов: <b>3-3.5</b><br />Устойчивость к морозу,° С: <b>до 21</b><br />
 
 </div></div>
 </div>	  
