--- a/catalog/flora.html
+++ b/catalog/flora.html
@@ -100,9 +100,9 @@
 <div id="content">
 <div id='dle-content'><div id="catalog-full">
 <span class="button" style="clear:both; float:right; margin: 5px;"><a href="javascript:history.go(-1);"> вернуться к каталогу </a></span>
-<h1>Алладин</h1>
+<h1>Флора(Лора)</h1>
 <br />
-<!--TBegin--><a href="uploads/posts/aladdin3.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin4.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/aladdin5.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin6.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><!--TBegin--><a href="uploads/posts/aladdin7.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/aladdin8.jpg" alt='Алладин' title='Алладин'  /></a><!--TEnd--><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />Срок созревания: <b>ранний</b><br />Средняя масса грозди, кг: <b>0,7</b><br />Средний вес ягоды, гр: <b>9-10</b><br />Окраска ягоды: <b>желто-розовые</b><br />Вкус (привкус) ягоды: <b>легкий мускатный</b><br />Восприимчивость к заболеваниям, баллов: <b>2-3</b><br />Устойчивость к морозу,° С: <b>25</b><br />Самоопыляемый<br />
+<!--TBegin--><a href="uploads/posts/lora3.jpg" onclick="return hs.expand(this)" ><img align="left" src="uploads/posts/lora4.jpg" alt='Флора(Лора)' title='Флора(Лора)'  /></a><!--TEnd--><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />Срок созревания: <b>ранний</b><br />Масса грозди, кг: <b>0,7-2,5</b><br />Вес ягоды, гр: <b>8-12</b><br />Окраска ягоды: <b>белый</b><br />Вкус (привкус) ягоды: <b>гармоничный</b><br />Восприимчивость к заболеваниям, баллов: <b>3,0-3,5</b><br />Устойчивость к морозу,° С: <b>22</b><br
 
 </div></div>
 </div>	  
