--- a/index_v.html
+++ b/index_v.html
@@ -87,7 +87,7 @@
 	</li>
 			
 	<li class="item12">
-		<a href="kontakt.html">
+		<a href="https://menshnik.github.io/web/kontakt.html">
 			<span>Контакты</span>
 		</a>
 	</li>
