--- a/coderec.html
+++ b/coderec.html
@@ -42,7 +42,7 @@
                          <table width="100%" border="0" cellpadding="4" cellspacing="0">
                            <tbody>
                              <tr valign="top">
-                               <td width="20%" nowrap="nowrap">&nbsp;<a title="Домой" href="coderec.html"><img alt="Домой" src="/icon_home.gif" width="12" border="0" height="13"></a>&nbsp;&nbsp;&nbsp;&nbsp; 
+                               <td width="20%" nowrap="nowrap">&nbsp;<a title="Домой" href="coderec.html"><img alt="Домой" src="img1/icon_home.gif" width="12" border="0" height="13"></a>&nbsp;&nbsp;&nbsp;&nbsp; 
                                </td>
                                <td width="80%" align="right">
                                </td>
