--- a/coderec.html
+++ b/coderec.html
@@ -32,7 +32,7 @@
         <table width="100%" border="0" cellpadding="0" cellspacing="0">
           <tbody>
             <tr valign="top" height="100">
-              <td bgcolor="#c1d5fa"><img src="https://menshnik.github.io/web/img1/top_image2.gif" width="155" height="100">
+              <td bgcolor="#c1d5fa"><img src="img1/top_image2.gif" width="155" height="100">
 			  </td>
               <td width="100%">
                 <table width="90%" border="0" cellpadding="0" cellspacing="0" height="100">
@@ -42,7 +42,7 @@
                          <table width="100%" border="0" cellpadding="4" cellspacing="0">
                            <tbody>
                              <tr valign="top">
-                               <td width="20%" nowrap="nowrap">&nbsp;<a title="Домой" href="coderec.html"><img alt="Домой" src="https://menshnik.github.io/web/img1/icon_home.gif" width="12" border="0" height="13"></a>&nbsp;&nbsp;&nbsp;&nbsp; 
+                               <td width="20%" nowrap="nowrap">&nbsp;<a title="Домой" href="coderec.html"><img alt="Домой" src="img1/icon_home.gif" width="12" border="0" height="13"></a>&nbsp;&nbsp;&nbsp;&nbsp; 
                                </td>
                                <td width="80%" align="right">
                                </td>
