--- a/coderec.html
+++ b/coderec.html
@@ -62,7 +62,7 @@
 				  </tbody>
 				</table>
 			  </td>
-              <td bgcolor="#c1d5fa"><img src="https://menshnik.github.io/web/img1/top_image1.gif" width="200" height="100"></td>
+              <td bgcolor="#c1d5fa"><img src="img1/top_image1.gif" width="200" height="100"></td>
 			</tr>
 	      </tbody>
 		</table>
@@ -78,7 +78,7 @@
               <table height="100%" cellSpacing=0 cellPadding=0 width=155 bgColor=#C1D5FA>
                 <tbody>
                   <tr height=20>
-                    <td><img height=1 src="https://menshnik.github.io/web/img1/blanker.gif" width=155>
+                    <td><img height=1 src="img1/blanker.gif" width=155>
 					</td>
 				  </tr>
                   <tr vAlign=top height="100%">
@@ -96,7 +96,7 @@
 
                           <tr valign=top>
 						    <td>              
-                              <IMG SRC="https://menshnik.github.io/web/img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+                              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
 							</td>
 							<td width="100%"><p><a  name="v20044" id="j20044" href="http://fxstudyonline.ru/top-10-svechnyh-patternov-na-grafike-foreks/" target="_blank" onmouseover="showMenu(20044, 0, 'left', 'bottom', -8, 0);" onmouseout="moff();">СВЕЧНЫЕ КОМБИНАЦИИ</a></p>          
                             </td>
@@ -134,7 +134,7 @@
 			 <div style="wight:300px; height:475px; overflow:auto">
 
 		      <h1>Добро <font color="#808080">пожаловать</font></h1>
-              <p><img src="https://menshnik.github.io/web/img1/maltipepel_2.gif"></p>
+              <p><img src="img1/maltipepel_2.gif"></p>
               <blockquote dir="ltr" style="margin-right: 0px;">
 			  <p>Мы <font color="#585858"><font color="#585858">специализируемся </font></font>на решении математических и физических задач, возникающих в форекс-торговле. Кроме этого мы пишем программы, специфика которых - математические расчеты. Имеем опыт в написании клиент-серверных приложений, баз данных InterBase, визуализации графиков.&nbsp;&nbsp;&nbsp; </p>
 			  <font face="Geneva, Arial, Helvetica, sans-serif"></font>
@@ -175,9 +175,9 @@
                <TBODY>
 
                 <TR>
-                  <TD width=15><IMG src="https://menshnik.github.io/web/img1/blanker.gif" width=15>
+                  <TD width=15><IMG src="img1/blanker.gif" width=15>
 				  </TD>
-                  <TD width="100%"><IMG height=10 src="https://menshnik.github.io/web/img1/blanker.gif" width=184> 
+                  <TD width="100%"><IMG height=10 src="img1/blanker.gif" width=184> 
                     <div class="sidetitle"><span>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Календарь</span>
 			        </div>
                     <div class="inner">
