--- a/o_razn.html
+++ b/o_razn.html
@@ -100,7 +100,7 @@
 						    <td>
        			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
 							</td>
-							<td width="100%"><p><a href="https://menshnik.github.io/web/o_razn2.html">В США ( 2017, август-сентябрь) </a></p>
+							<td width="100%"><p><a href="o_razn2.html">В США ( 2017, август-сентябрь) </a></p>
                             </td>
                           </tr>
 						  
