--- a/img_html/foto_report.html
+++ b/img_html/foto_report.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <base href="E:/Новый_сайт/">
+</head>
+<body>
+   <p><center><img src="img_html/img/1_Потомак.jpg" alt='Река Потомак'><br>
+      Вид на реку Потомак по дороге к Вашингтону.<br><br>
+   <p><center><img src="img_html/img/Джорджстаун.jpg" alt='Р-н Джорджстаун'><br>
+      Район Вашингтона - Джорджтаун. Вверху - несколько зданий Джорджтаунского университета.<br><br>
+   <p><center><img src="img_html/img/2016_12_17_2.jpg" alt='Музей авиации'><br>
+      В музее авиации.<br><br>  
+   <p><center><img src="img_html/img/2016_12_17_3.jpg" alt='Музей авиации'>
+   <p><center><img src="img_html/img/2016_12_17_4.jpg" alt='Музей авиации'>
+   <p><center><img src="img_html/img/2016_12_17_5.jpg" alt='Музей авиации'>
+   <p><center><img src="img_html/img/2016_12_19_1.jpg" alt='Нэшнл-Харбор'>&nbsp; 
+              <img src="img_html/img/2016_12_19_2.jpg" alt='Нэшнл-Харбор'><br>
+      В Нэшнл-Харбор.<br><br>
+	<p><center><img src="img_html/img/40.jpg" alt='Белый Дом'><br>
+      Около Белого Дома.<br><br>  
+   <p><center><img src="img_html/img/2016_12_23_1_1.jpg" alt='Белый Дом'>
+   <p><center><img src="img_html/img/2016_12_23_1.jpg" alt='Белый Дом'> 
+   <p><center><img src="img_html/img/bel_dom_elka_1.jpg" alt='Белый Дом'>   
+   <p><center><img src="img_html/img/bel_dom_elka.jpg" alt='Белый Дом'><br><br>
+   
+   <p><center><img src="img_html/img/natsion-alleya1.jpg" alt='Национальная аллея'><br>
+      Национальная аллея.<br>На аллее сосредоточены все основные памятники и монументы американской столицы.<br> С воздуха аллея представляет собой крест: на севере ( слева ) - Белый дом,<br> на юге ( справа ) - мемориал Джефферсона, на востоке ( сверху ) - Капитолий,<br> на западе ( снизу ) - мемориал Линкольна, в центре - монумент Вашингтона.<br> А между этими архитектурными колоссами располагаются парки и Ботанический сад.<br><br>   
+   <p><center><img src="img_html/img/natsion-alleya2.jpg" alt='Национальная аллея'><br>
+      А вот вид на аллею со стороны Капитолия<br><br>   
+   <p><center><img src="img_html/img/natsion-alleya3.jpg" alt='Национальная аллея'><br>
+      А это на участок от монумента Вашингтона до Капитолия. Слева и справа музеи.<br><br>   
+   <p><center><img src="img_html/img/2016_12_23_2.jpg" alt='Мемориал Линкольна'><br>
+      Начали осмотр с <a target=_blank href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%BC%D0%BE%D1%80%D0%B8%D0%B0%D0%BB_%D0%9B%D0%B8%D0%BD%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%83"><font size="3"><B>&nbsp;мемориала Линкольна.&nbsp;</font></B></a><br> Личное впечатление трудно передать словами.<br> Чувствуешь себя чем-то незначительным перед чем-то величественным.<br><br>   
+   <p><center><img src="img_html/img/2016_12_23_4.jpg" alt='Мемориал Линкольна'><br>
+      Вид с мемориала Линкольна на монумент Вашингтона.<br><br>   
+   <p><center><img src="img_html/img/2016_12_23_3.jpg" alt='Мемориал Линкольна'><br>
+      А это фотография сделана с обратной стороны мемориала на фоне реки Потомак.<br> По реке проходит граница Вашингтона.<br> Надо отметить, что в Вашингтоне запрещено строить здания выше Капитолия.<br> Но на другом берегу начинается уже штат Вирджиния, поэтому там уже можно строить высокие здания.<br><br>   
+   <p><center><img src="img_html/img/2016_12_23_5.jpg" alt='Мемориал Второй мировой войны'><br>
+      От мемориала Линкольна пошли в направлении монумента Вашингтона. <br>Посередине между ними расположен Мемориал Второй мировой войны,<br> строгое и красивое сооружение посвященное памяти погибшим.<br> На стеллах, расположенных по окружности, написаны все штаты США,<br> которые посылали своих граждан на войну.<br><br>   
+   <p><center><img src="img_html/img/2016_12_23_6.jpg" alt='Мемориал Второй мировой войны'><br>
+      До <a target=_blank href="https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BD%D1%83%D0%BC%D0%B5%D0%BD%D1%82_%D0%92%D0%B0%D1%88%D0%B8%D0%BD%D0%B3%D1%82%D0%BE%D0%BD%D1%83"><font size="3"><B>&nbsp;монумента Вашингтона&nbsp;</font></B></a> оставалось недалеко:<br><br>   
+   <p><center><img src="img_html/img/7786.jpg" alt='Монумент Вашингтону'><br>
+      Дошли до него, сделали пару фотографий у подножия.<br><br>
+   <p><center><img src="img_html/img/2016_12_23_8.jpg" alt='Монумент Вашингтона'><br>
+      Это вид на путь, который мы прошли до монумента Вашингтона<br> ( мемориал Линкольна, мемориал Второй мировой войны ):<br><br>
+   <p><center><img src="img_html/img/2016_12_23_7.jpg" alt='Монумент Вашингтона'><br>
+      Внутри монумента есть лифт, на котором посетители могут <br>подниматься вверх для обозрения окружающей местности.<br> К сожалению, там проводился ремонт и нам не удалось побывать наверху.<br><br>К тому моменту, когда мы дошли до монумента Вашингтона,<br> мы уже все устали и решили больше никуда не заходить, кроме <a target=_blank href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D1%82%D0%B0%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D0%B0%D0%B4_%D0%A1%D0%A8%D0%90"><font size="3"><B>&nbsp;Ботанического сада.&nbsp;</font></B></a>. <br>Обойти его весь нам уже было не по силам, быстро пробежались и отметились на фото:<br>   
+   <p><center><img src="img_html/img/2016_12_23_9.jpg" alt='Ботанический сад'><br>
+   
+   <p><center><img src="img_html/img/2016_12_25.jpg" alt='Рождество'><br>
+      Празднуем Рождество!<br><br>
 
+   <p><center><img src="img_html/img/2016_12_28_1.jpg" alt='Зоопарк'><br>
+      В зоопарке. Внучка потянулась к птичке, а та попыталась ущипнуть ее.<br><br>
+   <p><center><img src="img_html/img/2016_12_28_2.jpg" alt='Зоопарк'><br>   
+      Нехорошая птичка!<br><br>
+	  
+  <p><center><img src="img_html/img/2016_12_30_1.jpg" alt='Водопады Потомака'><br>
+   В национальном парке "Водопады Потомака".
+   <p><center><img src="img_html/img/2016_12_30_2.jpg" alt='Водопады Потомака'><br>
+   <p><center><img src="img_html/img/2016_12_30_3.jpg" alt='Водопады Потомака'><br>
+   Несмотря на довольно холодную погоду,<br> некоторые любители спуска по воде на специальных лодках ( каяках ) <br>забирались на верх водопадов, что мы и запечатлели:<br><br>
+
+   <p><center><img src="img_html/img/2017_01_01_1.jpg" alt='Балтимор'><br>
+   В городе - морском порту Балтимор.<br><br>
+   <p><center><img src="img_html/img/2017_01_01_2.jpg" alt='Балтимор'><br>
+   Внучка играет на инструменте, чем-то напоминающем большой ксилофон,<br> установленный на набережной.<br><br>  
+   <p><center><img src="img_html/img/2017_01_01_3.jpg" alt='Балтимор'>   
+   <p><center><img src="img_html/img/2017_01_01_4.jpg" alt='Балтимор'>
+   <p><center><img src="img_html/img/2017_01_01_5.jpg" alt='Балтимор'>
+   <p><center><img src="img_html/img/2017_01_01_6.jpg" alt='Балтимор'>
+   <p><center><img src="img_html/img/2017_01_01_7.jpg" alt='Балтимор'>
+   <p><center><img src="img_html/img/2017_01_01_8.jpg" alt='Балтимор'>
+   <p><center><img src="img_html/img/2017_01_01_9.jpg" alt='Балтимор'><br>
+   Не удержался и попросил на обратном пути снова меня сфотографировать на набережной,<br> такой вид красивый!<br><br>
+
+   <p><center><img src="img_html/img/2017_01_07_1.jpg" alt='Капитолий'><br>
+   Снова Вашингтон.На фоне <a target=_blank href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B1%D0%BB%D0%B8%D0%BE%D1%82%D0%B5%D0%BA%D0%B0_%D0%9A%D0%BE%D0%BD%D0%B3%D1%80%D0%B5%D1%81%D1%81%D0%B0"><font size="3"><B>&nbsp;Библиотеки Конгресса&nbsp;</font></B></a>&nbsp;куда мы и пошли потом<br><br>
+   <p><center><img src="img_html/img/2017_01_07_2.jpg" alt='Библиотека'><br>
+   А это вид на Капитолий с окна библиотеки<br><br>
+   <p><center><img src="img_html/img/2017_01_07_3.jpg" alt='Библиотека'><br>
+   А это в самой библиотеке. Красота!<br><br>
+   <p><center><img src="img_html/img/2017_01_07_4.jpg" alt='Библиотека'>   
+   <p><center><img src="img_html/img/2017_01_07_4_0.jpg" alt='Библиотека'><br>
+   Читальный зал библиотеки.<br><br>
+   <p><center><img src="img_html/img/2017_01_07_5.jpg" alt='Библиотека'><br>
+   Последняя фотография на фоне Капитолия.<br> Между прочим через две недели здесь проходила инаугурация Трампа.<br><br>
+   
+   <p><center><img src="img_html/img/2017_01_10.jpg" alt='Аэропорт'><br>
+   Перед отлетом в аэропорту им. Даллеса.<br><br>   
+</body>
+</html>
