--- a/img_html/foto_report.html
+++ b/img_html/foto_report.html
@@ -6,7 +6,7 @@
   <base href="E:/Новый_сайт/">
 </head>
 <body>
-   <p><center><img src="img_html/img/1_Потомак.jpg" alt='Река Потомак'><br>
+   <p><center><img src="https://menshnik.github.io/web/img_html/img/1_Потомак.jpg" alt='Река Потомак'><br>
       Вид на реку Потомак по дороге к Вашингтону.<br><br>
    <p><center><img src="img_html/img/Джорджстаун.jpg" alt='Р-н Джорджстаун'><br>
       Район Вашингтона - Джорджтаун. Вверху - несколько зданий Джорджтаунского университета.<br><br>
