--- a/img_html/foto_report.html
+++ b/img_html/foto_report.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <base href="E:/Новый_сайт/">
+  <base href="https://menshnik.github.io/web/">
 </head>
 <body>
    <p><center><img src="img_html/img/1_Потомак.jpg" alt='Река Потомак'><br>
