--- a/img_html/foto_report2.html
+++ b/img_html/foto_report2.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <base href="E:/Новый_сайт/">
+  <base href="https://menshnik.github.io/web/">
  </head>
  <body>
    <p><center><img src="img_html/img/img2/1.jpg" alt='Природный парк'><br>
