--- a/img_html/foto_report2.html
+++ b/img_html/foto_report2.html
@@ -8,7 +8,7 @@
  <body>
    <p><center><img src="img_html/img/img2/1.jpg" alt='Природный парк'><br>
       В природном парке Huntley Meadows Park.<br><br>
-   <p><center><img src="img_html/img/img2/2.jpg" alt='Природный парк'>
+   <p><center><img src="https://menshnik.github.io/web/img_html/img/img2/2.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/3.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/4.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/5.jpg" alt='Природный парк'>
