--- a/img_html/foto_report2.html
+++ b/img_html/foto_report2.html
@@ -8,16 +8,16 @@
  <body>
    <p><center><img src="img_html/img/img2/1.jpg" alt='Природный парк'><br>
       В природном парке Huntley Meadows Park.<br><br>
-   <p><center><img src="https://menshnik.github.io/web/img_html/img/img2/2.JPG" alt='Природный парк'>
+   <p><center><img src="img_html/img/img2/2.JPG" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/3.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/4.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/5.jpg" alt='Природный парк'>
    <p><center><img src="img_html/img/img2/6.jpg" alt='Природный парк'>
-   <p><center><img src="img_html/img/img2/7.jpg" alt='Природный парк'>
-   <p><center><img src="img_html/img/img2/8.jpg" alt='Природный парк'>
-   <p><center><img src="img_html/img/img2/9.jpg" alt='Природный парк'>
-   <p><center><img src="img_html/img/img2/10.jpg" alt='Природный парк'>
-   <p><center><img src="img_html/img/img2/11.jpg" alt='Комунна'><br>
+   <p><center><img src="img_html/img/img2/7.JPG" alt='Природный парк'>
+   <p><center><img src="img_html/img/img2/8.JPG" alt='Природный парк'>
+   <p><center><img src="img_html/img/img2/9.JPG" alt='Природный парк'>
+   <p><center><img src="img_html/img/img2/10.JPG" alt='Природный парк'>
+   <p><center><img src="img_html/img/img2/11.JPG" alt='Комунна'><br>
       Гуляем с внучкой рядом с домом.<br><br>
    <p><center><img src="img_html/img/img2/12.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/13.jpg" alt='Комунна'>
@@ -27,30 +27,30 @@
    <p><center><img src="img_html/img/img2/16.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/17.jpg" alt='Комунна'><br>
       Дождались!!! Дедушка и бабушка с внуками.<br><br>
-   <p><center><img src="img_html/img/img2/18.jpg" alt='Комунна'>
+   <p><center><img src="img_html/img/img2/18.JPG" alt='Комунна'>
    <p><center><img src="img_html/img/img2/19.jpg" alt='Комунна'>
-   <p><center><img src="img_html/img/img2/20.jpg" alt='Комунна'>
-   <p><center><img src="img_html/img/img2/21.jpg" alt='Комунна'>
+   <p><center><img src="img_html/img/img2/20.JPG" alt='Комунна'>
+   <p><center><img src="img_html/img/img2/21.JPG" alt='Комунна'>
    <p><center><img src="img_html/img/img2/22.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/23.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/24.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/25.jpg" alt='Комунна'>
    <p><center><img src="img_html/img/img2/26.jpg" alt='Комунна'>
-   <p><center><img src="img_html/img/img2/27.jpg" alt='Комунна'>
+   <p><center><img src="img_html/img/img2/27.JPG" alt='Комунна'>
    <p><center><img src="img_html/img/img2/28.jpg" alt='Мемориал Джефферсону'><br>
       Вашингтон, экскурсия к Мемориалу Джефферсону.<br><br>
    <p><center><img src="img_html/img/img2/29.jpg" alt='Мемориал Джефферсону'>
    <p><center><img src="img_html/img/img2/30.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/31.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/32.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/33.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/34.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/35.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/36.jpg" alt='Прогулка по Вашингтону'><br>
+   <p><center><img src="img_html/img/img2/31.JPG" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/32.JPG" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/33.JPG" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/34.JPG" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/35.JPG" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/36.JPG" alt='Прогулка по Вашингтону'><br>
       Прогулка по Вашингтону.<br><br>
    <p><center><img src="img_html/img/img2/37.jpg" alt='Прогулка по Вашингтону'><br>
       Еще одно чудо архитектуры – Масонский храм (House of the Temple),<br> созданный по подобию гробницы Мавсола в Галикарнасе – одного из семи чудес света.<br> Это резиденция Материнского Верховного совета элитного масонского ордена,<br> в число приверженцев которого, как предполагается,<br> входит множество высокопоставленных политиков и военных.<br> Вход в храм охраняют два сфинкса, а на табличке у бюста магистра Альберта Пике написано:<br> «То, что мы делаем для себя, умирает вместе с нами;<br> то, что мы делаем для других и для всего мира, остается бессмертным».<br><br>
-   <p><center><img src="img_html/img/img2/38.jpg" alt='Прогулка по Вашингтону'>
+   <p><center><img src="img_html/img/img2/38.JPG" alt='Прогулка по Вашингтону'>
    <p><center><img src="img_html/img/img2/39.jpg" alt='Кафедральный собор'><br>
       Вашингтонский национальный кафедральный собор.<br>
 Кафедральный собор святых Петра и Павла возглавляет епархию Епископальной церкви США.<br> Это один из самых больших соборов мира.<br> Облик собора представляет собой вариации на тему готических средневековых стилей.<br> С 2013 года в храме проводят венчания однополых пар.<br><br>
@@ -63,15 +63,15 @@
        А среди украшающих собор горгулий и химер, символов зла, есть и голова Дарта Вейдера<br> – героя киноэпоса «Звездные войны».<br><br>
    <p><center><img src="img_html/img/img2/45.jpg" alt='Кафедральный собор'><br>
       Здание собора окружает сказочный парк.<br><br>
-   <p><center><img src="img_html/img/img2/46.jpg" alt='Кафедральный собор'>
+   <p><center><img src="img_html/img/img2/46.JPG" alt='Кафедральный собор'>
    <p><center><img src="img_html/img/img2/47.jpg" alt='Зоопарк'><br>
       Национальный зоопарк (National Zoo) в Вашингтоне.<br> Был основан в 1889 году как один из филиалов Смитсоновского научно-исследовательского института<br> (Smithsonian Institution).<br><br>
    <p><center><img src="img_html/img/img2/48.jpg" alt='Зоопарк'><br>
       В зоопарке обитают около 2000 животных почти четырехста видов.<br> Среди обитателей зоопарка – большие панды, человекообразные обезьяны, тигры,<br> львы, леопарды, азиатские слоны, множество птиц, амфибий, рептилий, насекомых,<br> водных животных, мелких млекопитающих и многие другие.<br><br>
    <p><center><img src="img_html/img/img2/49.jpg" alt='Зоопарк'>
    <p><center><img src="img_html/img/img2/50.jpg" alt='Зоопарк'>
-   <p><center><img src="img_html/img/img2/51.jpg" alt='Зоопарк'>
-   <p><center><img src="img_html/img/img2/52.jpg" alt='Зоопарк'>
+   <p><center><img src="img_html/img/img2/51.JPG" alt='Зоопарк'>
+   <p><center><img src="img_html/img/img2/52.JPG" alt='Зоопарк'>
    <p><center><img src="img_html/img/img2/53.jpg" alt='Зоопарк'><br>
       На территории зоопарка расположен большой бассейн с морскими котиками.<br><br>
    <p><center><img src="img_html/img/img2/54.jpg" alt='Зоопарк'>
@@ -116,7 +116,7 @@
    <p><center><img src="img_html/img/img2/80_1.jpg" alt='Аннаполис'><br>
       Памятник пожарникам.<br><br>
    <p><center><img src="img_html/img/img2/81.jpg" alt='Аннаполис'>
-   <p><center><img src="img_html/img/img2/82.jpg" alt='Аннаполис'>
+   <p><center><img src="img_html/img/img2/82.JPG" alt='Аннаполис'>
    <p><center><img src="img_html/img/img2/82_1.jpg" alt='Аннаполис'><br>
       Памятник писателю.<br>Интересна это скульптурная композиция тем, что вы или ваши дети <br>могут запросто присесь возле писателя или его слушателей.<br><br>
    <p><center><img src="img_html/img/img2/83.jpg" alt='Аннаполис'>
