--- a/img_html/foto_report2.html
+++ b/img_html/foto_report2.html
@@ -40,7 +40,7 @@
    <p><center><img src="img_html/img/img2/28.jpg" alt='Мемориал Джефферсону'><br>
       Вашингтон, экскурсия к Мемориалу Джефферсону.<br><br>
    <p><center><img src="img_html/img/img2/29.jpg" alt='Мемориал Джефферсону'>
-   <p><center><img src="img_html/img/img2/30.jpg" alt='Мемориал Джефферсону'>
+   <p><center><img src="img_html/img/img2/30.JPG" alt='Мемориал Джефферсону'>
    <p><center><img src="img_html/img/img2/31.JPG" alt='Мемориал Джефферсону'>
    <p><center><img src="img_html/img/img2/32.JPG" alt='Мемориал Джефферсону'>
    <p><center><img src="img_html/img/img2/33.JPG" alt='Мемориал Джефферсону'>
