--- a/img_html/foto_report4.html
+++ b/img_html/foto_report4.html
@@ -15,11 +15,11 @@
    	<p><center><img src="img_html/img/img4/4.jpg" alt='Остров'><br>
 	  Вид на комплекс сверху. Наш корпус третий справа.<br><br>
    	<p><center><img src="img_html/img/img4/401.jpg" alt='Остров'>	  
-   	<p><center><img src="img_html/img/img4/5.jpg" alt='Остров'><br>
+   	<p><center><img src="img_html/img/img4/5.JPG" alt='Остров'><br>
 	  Осматриваемся. В небольшом водоеме много черепах и говорят есть крокодильчики. <br>По крайней мере есть предупреждающее об этом объявление.<br><br>
-   	<p><center><img src="img_html/img/img4/6.jpg" alt='Остров'><br>
+   	<p><center><img src="img_html/img/img4/6.JPG" alt='Остров'><br>
 	  Вдали бассейн.<br><br>
-   	<p><center><img src="img_html/img/img4/7.jpg" alt='Остров'><br>
+   	<p><center><img src="img_html/img/img4/7.JPG" alt='Остров'><br>
 	  По этой дорожке будем ходить на пляж.<br><br>
     <p><center><video  height="500" src="img_html/img/img4/8.mp4" controls alt='Остров'></video><br>
 	    Видео.<br><br>
@@ -49,7 +49,7 @@
    	<p><center><img src="img_html/img/img4/21.jpg" alt='Остров'>
    	<p><center><img src="img_html/img/img4/22.jpg" alt='Остров'><br>
 	  Поднимались на бывший маяк, где сейчас располагается небольшой музей.<br><br> 
-   	<p><center><img src="img_html/img/img4/23.jpg" alt='Остров'><br>
+   	<p><center><img src="img_html/img/img4/23.JPG" alt='Остров'><br>
 	  Вид с маяка.<br><br>
    	<p><center><img src="img_html/img/img4/24.jpg" alt='Остров'>
    	<p><center><img src="img_html/img/img4/25.jpg" alt='Остров'>
@@ -159,15 +159,15 @@
 	  Продолжаем отдыхать.<br> В один из дней нас посетила семья енотов из ближайших кустарников.<br> Жаль, что успели сфоткать только одного. <br><br>
    	<p><center><img src="img_html/img/img4/86.jpg" alt='Шарлотт'><br>
 	  Возвращались домой с отдыха через город <a target=_blank href="ru.wikipedia.org/wiki/Шарлотт_(Северная_Каролина)#Фестивали_и_особые_мероприятия"><B>&nbsp;Шарлотт&nbsp;</font></B></a>.<br> Самое высокое здание в городе - главная штаб-квартира Bank of America.<br><br>
-   	<p><center><img src="img_html/img/img4/87.jpg" alt='Шарлотт'><br>
+   	<p><center><img src="img_html/img/img4/87.JPG" alt='Шарлотт'><br>
 	  Памятник английской королеве Шарлотт, в честь которой назван город. <br><br>
    	<p><center><img src="img_html/img/img4/88.jpg" alt='Шарлотт'><br>
 	  Останавливались в городе с ночлегом в отеле,<br> так что было время посмотреть город. <br><br>
    	<p><center><img src="img_html/img/img4/89.jpg" alt='Шарлотт'>
-   	<p><center><img src="img_html/img/img4/90.jpg" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/90.JPG" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/91.jpg" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/92.jpg" alt='Шарлотт'>
-   	<p><center><img src="img_html/img/img4/93.jpg" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/93.JPG" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/94.jpg" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/95.jpg" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/96.jpg" alt='Шарлотт'>
@@ -176,13 +176,13 @@
    	<p><center><img src="img_html/img/img4/98.jpg" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/99.jpg" alt='Шарлотт'><br>
 	  Музей современного искусства Бектлера. <br><br>
-   	<p><center><img src="img_html/img/img4/100.jpg" alt='Шарлотт'>
-   	<p><center><img src="img_html/img/img4/101.jpg" alt='Шарлотт'>
-   	<p><center><img src="img_html/img/img4/102.jpg" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/100.JPG" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/101.JPG" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/102.JPG" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/103.jpg" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/104.jpg" alt='Шарлотт'>
    	<p><center><video  height="500" src="img_html/img/img4/105.mp4" controls alt='Шарлотт'></video><br><br>
-   	<p><center><img src="img_html/img/img4/106.jpg" alt='Шарлотт'>
+   	<p><center><img src="img_html/img/img4/106.JPG" alt='Шарлотт'>
    	<p><center><img src="img_html/img/img4/107.jpg" alt='Шарлотт'><br>
 	  Фонтан в форме головы Metalmorphosis.<br> Он состоит из нескольких частей, вращающихся на 360 градусов.<br> В единое целое голова собирается лишь 7 раз в сутки <br><br>
    	<p><center><img src="img_html/img/img4/108.jpg" alt='Шарлотт'><br>
