--- a/coderec.html
+++ b/coderec.html
@@ -116,6 +116,14 @@
 						   <td width=100%><p><a  name="v20069" id="j20069" href="https://admiralmarkets.com/ru/education/articles/forex-strategy/luchshiie-torghovyie-stratieghii-foreks-kotoryie-rabotaiut" target="_blank" onmouseover="showMenu(20069, 0, 'left', 'bottom', -8, 0);" onmouseout="moff();">ТОРГОВЫЕ СТРАТЕГИИ</a></p>
                            </td>
                           </tr>
+						  
+						  <tr valign=top>
+						    <td>              
+                              <IMG SRC="_img/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+							</td>
+							<td width="100%"><p><a  href="https://fortrader.org/" target="_blank">Последние новости</a></p>         
+                            </td>
+                          </tr>
 
                         </tbody>
 					  </table>
@@ -136,7 +144,7 @@
 		      <h1>Добро <font color="#808080">пожаловать</font></h1>
               <p><img src="img1/maltipepel_2.gif"></p>
               <blockquote dir="ltr" style="margin-right: 0px;">
-			  <p>Мы <font color="#585858"><font color="#585858">специализируемся </font></font>на решении математических и физических задач, возникающих в форекс-торговле. Кроме этого мы пишем программы, специфика которых - математические расчеты. Имеем опыт в написании клиент-серверных приложений, баз данных InterBase, визуализации графиков.&nbsp;&nbsp;&nbsp; </p>
+			  <p>&nbsp;&nbsp;&nbsp;Мы <font color="#585858"><font color="#585858">специализируемся </font></font>на решении математических и физических задач, возникающих в форекс-торговле. Кроме этого мы пишем программы, специфика которых - математические расчеты. Имеем опыт в написании клиент-серверных приложений, баз данных InterBase, визуализации графиков.&nbsp;&nbsp;&nbsp; </p>
 			  <font face="Geneva, Arial, Helvetica, sans-serif"></font>
 			  <p>
                 <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -146,7 +154,7 @@
                       <td style="padding: 10px; font-size: 11px;" width="21%" bgcolor="#dddddd"><i>"Наша цель: привнести в современную науку хотя бы толику нового знания или хотя бы популяризировать то, что уже придумано предшественниками."</i>
 					  </td>
                       <td>
-                        <blockquote dir="ltr" style="margin-right: 0px;"><font face="Geneva, Arial, Helvetica, sans-serif">Заработать на финансовом рынке или на рынке ценных буммаг - задача, которая бросает вызов математикам и физикам. Множество разработанных теорий пока не привело к созданию так называемого "священного грааля" (а если привело, то еще не стало достоянием общественности). Денежный привкус создает неблагоприятный фон для отыскания общего решения задачи: каждый вовлеченный ограничивается частным решением. Пусть поставленная цель и далека, но работая с частностями, мы хотя бы можем надеяться, что однажды наше мышление придет к впечатляющему обобщению. Предлагаемые решения построены по линии <b>обобщения</b> многочисленных стратегий и претендуют на звание "<b>инвариантные</b> ко времени". Мы надеемся, что эти решения прослужат вам годы, а для нас это увеличит надежность решений и возможно приведет к усовершенствованию стратегий. <br><br></font>
+                        <blockquote dir="ltr" style="margin-right: 0px;"><font face="Geneva, Arial, Helvetica, sans-serif">&nbsp;&nbsp;&nbsp;Заработать на финансовом рынке или на рынке ценных буммаг - задача, которая бросает вызов математикам и физикам. Множество разработанных теорий пока не привело к созданию так называемого "священного грааля" (а если привело, то еще не стало достоянием общественности). Денежный привкус создает неблагоприятный фон для отыскания общего решения задачи: каждый вовлеченный ограничивается частным решением. Пусть поставленная цель и далека, но работая с частностями, мы хотя бы можем надеяться, что однажды наше мышление придет к впечатляющему обобщению.<br>&nbsp;&nbsp;&nbsp; Предлагаемые решения построены по линии <b>обобщения</b> многочисленных стратегий и претендуют на звание "<b>инвариантные</b> ко времени". Мы надеемся, что эти решения прослужат вам годы, а для нас это увеличит надежность решений и возможно приведет к усовершенствованию стратегий. <br><br></font>
 						</blockquote>
 					  </td>
 					</tr> 
@@ -162,7 +170,7 @@
               <p><b>3. Репутация. </b><br>Рекомендации и <a title="Книга отзывов" href="comment" target="_self">благодарности</a> наших <a title="Клиенты компании" href="clients" target="_self">клиентов</a> из самых разных сфер деятельности.</p>
               <p><b>4. Сильная команда.</b><br>Профессиональные&nbsp;компетенции специалистов центра, подкрепленные практическими результатами,&nbsp;позволяют предоставлять нашим клиентам уникальные знания и возможности.<br></p>
               <p>&nbsp;</p>
-              <p>Сегодня мы живем в условиях постоянно изменяющейся бизнес-среды. Меняются технологии работы, потребности клиентов, рынки сбыта. Это требует от компаний особой гибкости, способности быстро реагировать и адекватно корректировать свою стратегию и тактику. В такой ситуации привлечение дополнительного интеллектуального ресурса – беспристрастного, обладающего свежими идеями – оказывается необходимым<i>. </i></p>
+              <p>&nbsp;&nbsp;&nbsp;Сегодня мы живем в условиях постоянно изменяющейся бизнес-среды. Меняются технологии работы, потребности клиентов, рынки сбыта. Это требует от компаний особой гибкости, способности быстро реагировать и адекватно корректировать свою стратегию и тактику. В такой ситуации привлечение дополнительного интеллектуального ресурса – беспристрастного, обладающего свежими идеями – оказывается необходимым<i>. </i></p>
               <br>
               <p><a href="index.html"><b>Главная</b></a></p>
               <br>
