--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Персональный сайт - Главная страница</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
-    <base href="https://menshnik.github.io/web/">
+	<base href="https://menshnik.github.io/web/">
 
     <link rel="stylesheet" type="text/css" href="my.css">
     <link rel="stylesheet" type="text/css" href="js/calendar2.css">	
@@ -28,7 +28,7 @@
 			  <ul class="uMenuRoot">
                 <li><a class=" uMenuItemA" href="index.html" ><span>Главная страница</span></a></li>
                 <li><a  href="index_v.html" target="_blank"><span>Виноград , орехи ...</span></a></li>
-                <li><a  href="https://www.myheritage.com/site-140074001/menshnik?lang=RU" target="_blank"  ><span>Семейный сайт</span></a></li>
+                <li><a  href="o_raznom6.html" target="_blank"  ><span>Семейный сайт</span></a></li>
 				<li><a  href="coderec.html" target="_blank"><span>Немного о Форекс</span></a></li>
                 <li><a  href="o_razn.html" target="_blank"><span>Поездки и экскурсии</span></a></li>
 				<li><a  href="o_raznom4.html" target="_blank"><span>О разном...</span></a></li>
