--- a/o_raznom6.html
+++ b/o_raznom6.html
@@ -32,7 +32,7 @@
         <table width="100%" border="0" cellpadding="0" cellspacing="0">
           <tbody>
             <tr valign="top" height="100">
-              <td bgcolor="#c1d5fa"><img src="_img/top_image2.gif" width="155" height="100">
+              <td bgcolor="#c1d5fa"><img src="img1/top_image2.gif" width="155" height="100">
 			  </td>
               <td width="100%">
                 <table width="90%" border="0" cellpadding="0" cellspacing="0" height="100">
@@ -56,7 +56,7 @@
 				  </tbody>
 				</table>
 			  </td>
-              <td bgcolor="#c1d5fa"><img src="_img/top_image1.gif" width="200" height="100"></td>
+              <td bgcolor="#c1d5fa"><img src="img1/top_image1.gif" width="200" height="100"></td>
 			</tr>
 	      </tbody>
 		</table>
