--- a/o_raznom6.html
+++ b/o_raznom6.html
@@ -123,9 +123,9 @@
               <TBODY>
 
                 <TR>
-                  <TD width=15><IMG src="_img/blanker.gif" width=15>
+                  <TD width=15><IMG src="img1/blanker.gif" width=15>
 				  </TD>
-                  <TD width="100%"><IMG height=10 src="_img/blanker.gif" width=184> 
+                  <TD width="100%"><IMG height=10 src="img1/blanker.gif" width=184> 
                     <div class="sidetitle"><span>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Календарь</span>
 			        </div>
                     <div class="inner">
